This file only list changes to game code.  Changes to content can be found here:

http://onehouronelife.com/updateLog.php



Version 369    2023-05-12

--Added comment field to transitions (in editor), for leaving notes about
  complex, special-purpose transitions.

--Fixed windows script for makeRegenerateCaches to handle ogg.cpp building.




Server Fixes

--Fixed so that +giveClue only works if victim is given a new permanent emot
  that they don't already have.

--Fixed twin-caused crash due to ipAddress memory leak fix.

--Wildcard support on vog allow list.

--Fixed VOGP crash, if player count shrinks between invocations.

--Fixed so you can't FOLLOW someone from more than 5000 tiles away.
  People in donkeytown were spam follow/unfollowing to annoy people.

--Fixed so you can't FOLLOW someone from more than 200 tiles away, since
  long-distance follow was allowing people to locate Eve and grief her.
  Thanks Astral W.

--Added forced disconnection for clients that are spamming too many messages
  per second.  Thanks QuirkySmirkyIan.

--Rolled back the forced disconnection for now.  Considering a new way to deal
  with clients that spam messages without waiting for server response.

--New force-disconnect code that pinpoints only macro/bot-based exploit, with a
  limit of 40 action messages per 5 seconds, or 80 move messages per 5 seconds.




Version 365    2021-October-28

--Sound effects can now be OGG files (in sounds folder) to deal with longer
  sounds, like snippets of music, without wasting disk space.

--Emotes can now +hideHead of emoting person.

--Support for rideable objects that +hideRider.

--More robust implementation of +neverDrop, so that object isn't manually
  dropable or swappable even if use-on-bare-ground transition defined (that
  transition only applies when object force-dropped, like when holder is
  wounded).

--Support for HELL arrow.

--Fixed a memory leak in server newConnection ipAddress tracking.

--Added support for +giveClue
